--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -3,18 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BDNR Project</title>
+  <title>TickETCD</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
   <header>
-    <h1>
-      BDNR Project - Node Info
-    </h1>
-    <h3><a href="/">Home</a></h3>
+    <h1>TickETCD</h1>
+    <h2>Consistency in Every Ticket</h2>
   </header>
 
-  <main></main>
+  <main>
+    Profile!
+  </main>
 
   <footer>
     <p>BDNR @ 2024</p>
