--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -14,7 +14,12 @@
   </header>
 
   <main>
-    Profile!
+    <h3>User info:</h3>
+
+    <h4>Username: <%= user.username %> </h4>
+    <h4>Email: <%= user.email %> </h4>
+    <h4>Password: <%= user.password %> :D</h4>
+    <h4>Role: <%= user.role %> </h4>
   </main>
 
   <footer>
