Bug detected, inspect diff

--- a/src/views/event.ejs
+++ b/src/views/event.ejs
@@ -14,8 +14,12 @@
   </header>
 
   <main>
-    Event!
+    <h2>Event <%= event.name %><h2>
+    <h4><%= event.description %></h4>
+    <h4>In: <%= event.localisation %></h4>
   </main>
+
+  <hr>
 
   <footer>
     <p>BDNR @ 2024</p>
