Bug /home corrected

--- a/src/views/event.ejs
+++ b/src/views/event.ejs
@@ -14,9 +14,9 @@
   </header>
 
   <main>
-    <h2>Event <%= event.name %><h2>
+    <h2>Event '<%= event.name %>'<h2>
     <h4><%= event.description %></h4>
-    <h4>In: <%= event.localisation %></h4>
+    <h4>In: <%= event.location %></h4>
   </main>
 
   <hr>
