--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -14,12 +14,42 @@
   </header>
 
   <main>
+
     <h3>User info:</h3>
 
     <h4>Username: <%= user.username %> </h4>
     <h4>Email: <%= user.email %> </h4>
     <h4>Password: <%= user.password %> :D</h4>
     <h4>Role: <%= user.role %> </h4>
+
+    <hr></hr>
+
+    <h3>User purchases:</h3>
+
+    <% if (purchases && purchases.length > 0) { %>
+      <ul>
+        <% purchases.forEach(purchase => { %>
+          <li><a href="/event?id=<%= purchase.event_id %>"><%= purchase.event_name %></a></li>
+
+          <ul>
+            <% purchase.info.forEach(a => { %>
+              <li><%= a.date %></li>
+
+              <ul>
+                <% a.tickets.forEach(ticket => { %>
+                  <li>Type: <%= ticket.type %> | Quantity:  <%= ticket.quantity %></li>
+                <% }); %>
+              </ul>
+              
+            <% }); %>
+          </ul>
+
+        <% }); %>
+      </ul>
+    <% } else { %>
+      <p>No purchases found!</p>
+    <% } %>
+
   </main>
 
   <footer>
