--- a/labs/3 - Cassandra/templates/index.html
+++ b/labs/3 - Cassandra/templates/index.html
@@ -14,6 +14,6 @@
 
     <footer>
         <a href="/">Home</a>
-        <a href="/add-bookmarks.html">Add another bookmark!</a>
+        <a href="/add">Add another bookmark!</a>
     </footer>
 </html>
