insert values into cassandra database

--- a/labs/3 - Cassandra/templates/bookmark.html
+++ b/labs/3 - Cassandra/templates/bookmark.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Products</title>
+    <title>Bookmark</title>
 </head>
 <body>
-    <h1>Products</h1>
+    <h1>Bookmark</h1>
     <ul>
-        Cocktails
+       
     </ul>
 </body>
 </html>
