--- a/labs/3 - Cassandra/templates/index.html
+++ b/labs/3 - Cassandra/templates/index.html
@@ -11,7 +11,7 @@
             {% for bookmark in bookmarks %}
             <li>
                 <h2>
-                    <a href="{bookmark[0]}">{{ bookmark[0] }}</a>
+                    <a href="{{url_for('bookmarks', url_md5=bookmark[2])}}">{{ bookmark[0] }}</a>
                 </h2>
                 <ul>
                     {% for tag in bookmark[1] %}
