--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -22,6 +22,10 @@
     <h4>Password: <%= user.password %> :D</h4>
     <h4>Role: <%= user.role %> </h4>
 
+    <form action="/logout" method="POST">
+      <button type="submit">Logout</button>
+    </form>
+
     <hr></hr>
 
     <h3>User purchases:</h3>
