create tickets page and start the buy action

--- a/src/views/event.ejs
+++ b/src/views/event.ejs
@@ -40,7 +40,8 @@
     <% } else { %>
       <p>No tickets found!</p>
     <% } %>
-
+    
+    <a href="/tickets?eventid=<%= event.id %>">Buy Tickets</a>
   </main>
 
   <hr>
