--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -38,6 +38,8 @@
       <section id="register">
         <h2>Register</h2>
         <form action="/register" method="POST">
+          <label for="name">Name:</label><br>
+          <input type="text" id="name" name="name"><br>
           <label for="email">Email:</label><br>
           <input type="email" id="email" name="email"><br>
           <label for="username">Username:</label><br>
