action to add purchase almost done

--- a/src/views/event.ejs
+++ b/src/views/event.ejs
@@ -41,7 +41,7 @@
       <p>No tickets found!</p>
     <% } %>
     
-    <a href="/tickets?eventid=<%= event.id %>">Buy Tickets</a>
+    <a href="/tickets?eventid=<%= eventid %>">Buy Tickets</a>
   </main>
 
   <hr>
