--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TickETCD</title>
   <link rel="stylesheet" href="css/style.css">
+  <!-- Include Chart.js library -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
 
@@ -28,12 +30,60 @@
     <% } else { %>
       <p>No nodes found!</p>
     <% } %>
-
+    <!-- Add canvas for charts -->
+    <% Object.keys(statistics).forEach(type => { %>
+      <h3>Total Revenue for events of type <%= type.charAt(0).toUpperCase() + type.slice(1) %></h3>
+      <canvas id="<%= type %>Chart" width="400" height="400"></canvas>
+      <p>Total revenue: <%= statistics[type]['total'] %> $</p>
+    <% }); %>
   </main>
 
   <footer>
     <p>BDNR @ 2024</p>
   </footer>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+        // Define statistics variable using EJS
+        var statistics = <%- JSON.stringify(statistics) %>; // disclaimer: vs code highlights error but this line works fine
+        
+        // JavaScript code to create pie charts
+        var types = Object.keys(statistics);
+        types.forEach(function(type) {
+            var ctx = document.getElementById(type + 'Chart').getContext('2d');
+            var dataKeys = Object.keys(statistics[type]).filter(key => key !== 'total'); // Exclude 'total' key
+            var dataValues = dataKeys.map(key => statistics[type][key]);
+            var total = dataValues.reduce((acc, cur) => acc + cur, 0); // Calculate total
+            var dataColors = [
+              'green',
+              'pink',
+              'red',
+              'yellow'
+            ];
+            var myChart = new Chart(ctx, {
+                type: 'doughnut',
+                data: {
+                    labels: dataKeys.map((key, index) => `${key}: ${(dataValues[index] / total * 100).toFixed(2)}%`), // Include percentage in the label
+                    datasets: [{
+                        label: 'Ticket Sales (USD$)',
+                        data: dataValues,
+                        backgroundColor: dataColors,
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    responsive: false,
+                    maintainAspectRatio: false,
+                    legend: {
+                        position: 'right'
+                    }
+                }
+            });
+        });
+    });
+</script>
+
+
 
 </body>
 </html>
