--- a/src/views/event.ejs
+++ b/src/views/event.ejs
@@ -8,10 +8,8 @@
 </head>
 <body>
 
-  <header>
-    <h1>TickETCD</h1>
-    <h2>Consistency in Every Ticket</h2>
-  </header>
+  <%- include('header.ejs') %>
+
 
   <main>
 
