--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,10 +8,7 @@
 </head>
 <body>
 
-  <header>
-    <h1>TickETCD</h1>
-    <h2>Consistency in Every Ticket</h2>
-  </header>
+  <%- include('header.ejs', {user : undefined}) %>
 
   <main>
 
