--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -10,10 +10,8 @@
 </head>
 <body>
 
-  <header>
-    <h1>TickETCD</h1>
-    <h2>Consistency in Every Ticket</h2>
-  </header>
+  <%- include('header.ejs') %>
+
 
   <main>
     <h2>Admin Page</h2>
