--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -8,11 +8,8 @@
 </head>
 <body>
 
-  <header>
-    <h1>TickETCD</h1>
-    <h2>Consistency in Every Ticket</h2>
-  </header>
-
+  <%- include('header.ejs') %>
+  
   <main>
 
     <% if (typeof error_message !== 'undefined' && error_message.length > 0) { %>
