refactor header: add logout button to the header

--- a/src/views/header.ejs
+++ b/src/views/header.ejs
@@ -13,5 +13,12 @@
             <a href="/admin">Admin Page</a>
         </div>
     <% } %>
+    <% if (user) { %>
+        <div class="logout">
+            <form action="/logout" method="POST">
+                <button type="submit">Logout</button>
+            </form>
+        </div>
+    <% } %>
 </header>
 
