bug fix: round total revenue to 2 decimal places in admin

--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -32,7 +32,7 @@
     <% Object.keys(statistics).forEach(type => { %>
       <h3>Total Revenue for events of type <%= type.charAt(0).toUpperCase() + type.slice(1) %></h3>
       <canvas id="<%= type %>Chart" width="400" height="400"></canvas>
-      <p>Total revenue: <%= statistics[type]['total'] %> $</p>
+      <p>Total revenue: <%= statistics[type]['total'].toFixed(2) %> $</p>
     <% }); %>
 
     <!-- Display the event creation -->
