--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -40,13 +40,13 @@
     <form action="/admin/createEvent" method="POST">
       <h4>Event Details</h4>
       <label for="eventName">Event Name:</label><br>
-      <input type="text" id="eventName" name="eventName"><br>
+      <input type="text" id="eventName" name="eventName" required><br>
       
       <label for="eventDescription">Event Description:</label><br>
-      <textarea id="eventDescription" name="eventDescription" rows="4" cols="50"></textarea><br>
+      <textarea id="eventDescription" name="eventDescription" rows="4" cols="50" required></textarea><br>
       
       <label for="eventLocation">Event Location:</label><br>
-      <select id="eventLocation" name="eventLocation">
+      <select id="eventLocation" name="eventLocation" required>
         <option value="" disabled selected>Select Event Location</option>
         <% if (eventLocations && eventLocations.length > 0) { %>
           <% eventLocations.forEach(location => { %>
@@ -56,7 +56,7 @@
       </select><br>
       
       <label for="eventType">Event Type:</label><br>
-      <select id="eventType" name="eventType">
+      <select id="eventType" name="eventType" required>
         <option value="" disabled selected>Select Event Type</option>
         <% if (eventTypes && eventTypes.length > 0) { %>
           <% eventTypes.forEach(eventType => { %>
@@ -66,15 +66,15 @@
       </select><br>
       
       <label for="eventDate">Event Date:</label><br>
-      <input type="datetime-local" id="eventDate" name="eventDate"><br>
+      <input type="datetime-local" id="eventDate" name="eventDate" required><br>
       <h4>Tickets</h4>
         <% ticketTypes.forEach(ticketType => { %>
           <h5><%= ticketType %></h5>
           <label for="<%= ticketType.toLowerCase() %>TotalQuantity">Total Quantity:</label><br>
-          <input type="number" id="<%= ticketType.toLowerCase() %>TotalQuantity" name="<%= ticketType.toLowerCase() %>TotalQuantity" required><br>
+          <input type="number" id="<%= ticketType.toLowerCase() %>TotalQuantity" name="<%= ticketType.toLowerCase() %>TotalQuantity" required min="1"><br>
           
           <label for="<%= ticketType.toLowerCase() %>TicketPrice">Price:</label><br>
-          <input type="number" id="<%= ticketType.toLowerCase() %>TicketPrice" name="<%= ticketType.toLowerCase() %>TicketPrice" step="0.01" required><br>
+          <input type="number" id="<%= ticketType.toLowerCase() %>TicketPrice" name="<%= ticketType.toLowerCase() %>TicketPrice" step="0.01" required min="1"><br>
         <% }); %>
       <input type="submit" value="Create Event">
     </form>
