--- a/src/views/event.ejs
+++ b/src/views/event.ejs
@@ -6,53 +6,58 @@
   <title>TickETCD</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="bg-gray-100">
 
   <%- include('header.ejs') %>
 
 
-  <main>
+  <main class="max-w-4xl mx-auto px-4 py-8">
 
-    <h2>Event '<%= event.name %>'<h2>
-    <h4><%= event.description %></h4>
-    <h4>In: <%= event.location %></h4>
-    <h4>Type: <%= event.type %></h4>
-    <h4>Date: <%= event.date %></h4>
-    <h4>Current we've <%= event.current_quantity %> total tickets to purchase</h4>
+    <h2 class="text-2xl font-bold mb-4">Event '<%= event.name %>'</h2>
+    <h4 class="mb-2"><%= event.description %></h4>
+    <h4 class="mb-2">In: <%= event.location %></h4>
+    <h4 class="mb-2">Type: <%= event.type %></h4>
+    <h4 class="mb-2">Date: <%= event.date %></h4>
+    <h4 class="mb-4">Current we've <%= event.current_quantity %> total tickets to purchase</h4>
     
-    <form method="POST" action="/event/<%= isFavourite ? 'remove-favourite' : 'add-favourite' %>">
+    <form method="POST" action="/event/<%= isFavourite ? 'remove-favourite' : 'add-favourite' %>" class="mb-4">
       <input value="<%= eventID %>" name="eventID" type="hidden">
-      <button type="submit">
+      <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 transition duration-300">
         <%= isFavourite ? 'Remove from Favorites' : 'Add to Favorites' %>
       </button>
     </form>
-    <hr></hr>
+    <hr class="mb-4">
 
-    <h3>Tickets details</h3>
+    <h3 class="text-lg font-semibold mb-2">Tickets details</h3>
 
     <% if (tickets && tickets.length > 0) { %>
-      <ul>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
         <% tickets.forEach(ticket => { %>
-          <li><%= ticket.type %></li>
-          <ul>
-            <li>Price: <%= ticket.price %></li>
-            <li>Current quantity: <%= ticket.current_quantity %></li>
-            <li>Total quantity: <%= ticket.total_quantity %></li>
-          </ul>
+          <div class="border border-gray-200 rounded-md p-4">
+            <h4 class="text-lg font-semibold mb-2"><%= ticket.type %></h4>
+            <ul>
+              <li>Price: <%= ticket.price %>$</li>
+              <li>Current quantity: <%= ticket.current_quantity %></li>
+              <li>Total quantity: <%= ticket.total_quantity %></li>
+            </ul>
+          </div>
         <% }); %>
-      </ul>
+      </div>
     <% } else { %>
       <p>No tickets found!</p>
     <% } %>
     
-    <a href="/tickets?eventid=<%= eventid %>">Buy Tickets</a>
+    <div class="flex justify-center mt-8">
+      <a href="/tickets?eventid=<%= eventid %>" class="bg-blue-500 text-white px-6 py-3 rounded-full hover:bg-blue-600 transition duration-300">
+        Buy Tickets
+      </a>
+    </div>
+
   </main>
 
-  <hr>
+  <hr class="mb-4">
 
-  <footer>
-    <p>BDNR @ 2024</p>
-  </footer>
+  <%- include('footer.ejs') %>
 
 </body>
 </html>
