--- a/src/views/header.ejs
+++ b/src/views/header.ejs
@@ -1,22 +1,21 @@
-<link rel="stylesheet" href="css/style.css">
 
-<header className="bg-gray-800 text-white py-4 px-8 flex justify-between items-center">
+<header class="bg-gray-800 text-white py-4 px-8 flex justify-between items-center">
     <div>
         <h1 class="text-2xl font-bold">TickETCD</h1>
         <h2 class="text-sm">Consistency in Every Ticket</h2>
     </div>
     <% if (user && user.username) { %>
-        <div class="user-info ml-auto">
+        <div class="ml-auto">
             <a href="/profile?username=<%= user.username %>" class="text-blue-300">Welcome, <%= user.username %></a>
         </div>
     <% } %>
     <% if (user && user.role == 'admin') { %>
-        <div class="admin-info ml-4">
+        <div class="ml-4">
             <a href="/admin" class="text-blue-300">Admin Page</a>
         </div>
     <% } %>
     <% if (user) { %>
-        <div class="logout ml-4">
+        <div class="ml-4">
             <form action="/logout" method="POST">
                 <button type="submit" class="text-blue-300">Logout</button>
             </form>
