--- a/src/views/tickets.ejs
+++ b/src/views/tickets.ejs
@@ -7,28 +7,40 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
 
-    <body>
+    <body class="bg-gray-100">
         <%- include('header.ejs') %>
-
-
-        <main>
-            <h2>Tickets</h2>
+    
+        <main class="container mx-auto py-8 px-4">
+            <h2 class="text-2xl font-semibold mb-4">Tickets</h2>
             <form action="/tickets/buytickets" method="POST">
-                <input hidden name="event" value="<%= eventid %>" />
-                <ul>
+                <input type="hidden" name="event" value="<%= eventid %>" />
+                <div class="flex flex-wrap -mx-2">
                     <% tickets.forEach(ticket => { %>
-                        <li><%= ticket.type %></li>
-                            <ul>
-                                <li>Price: <%= ticket.price %></li>
-                                <li>Current quantity: <%= ticket.current_quantity %></li>
-                            </ul>
-                            <label>Number of tickets:</label>
-                            <input hidden name="tickettype" value="<%= ticket.type %>"/>
-                            <input type="number" name="ticketquantity" min="1" max="<%= ticket.current_quantity %>"/>
-                <% }); %> 
-                </ul>
-                <button type="submit">Comprar</button>
+                        <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 px-2 mb-4">
+                            <div class="bg-white border border-gray-200 p-4 rounded-lg">
+                                <p class="text-lg font-semibold mb-2"><%= ticket.type %></p>
+                                <ul class="ml-4 mb-2">
+                                    <li>Price: <%= ticket.price %></li>
+                                    <li>Current quantity: <%= ticket.current_quantity %></li>
+                                </ul>
+                                <label class="block">Number of tickets:</label>
+                                <input type="hidden" name="tickettype" value="<%= ticket.type %>"/>
+                                <input type="number" name="ticketquantity" min="1" max="<%= ticket.current_quantity %>"
+                                    class="border border-gray-300 rounded-md px-3 py-2 mt-1 focus:outline-none focus:border-blue-500" />
+                            </div>
+                        </div>
+                    <% }); %>
+                </div>
+                <div class="flex justify-center">
+                    <button type="submit"
+                        class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 cursor-pointer transition duration-300">Comprar</button>
+                </div>
             </form>
         </main>
     </body>
+    
+    
+
+    <%- include('footer.ejs') %>
+
 </html>
