add notifications to database

--- a/src/views/event.ejs
+++ b/src/views/event.ejs
@@ -11,9 +11,10 @@
   <%- include('header.ejs') %>
 
 
-  <main class="max-w-4xl mx-auto px-4 py-8">
+  <main class="max-w-4xl px-4 py-8 mx-auto">
 
-    <h2 class="text-2xl font-bold mb-4">Event '<%= event.name %>'</h2>
+    <h2 class="mb-4 text-2xl font-bold">Event '<%= event.name %>'</h2>
+    <h2 class="mb-4 text-2xl font-bold">EventID '<%= eventid %>'</h2>
     <h4 class="mb-2"><%= event.description %></h4>
     <h4 class="mb-2">In: <%= event.location %></h4>
     <h4 class="mb-2">Type: <%= event.type %></h4>
@@ -22,19 +23,19 @@
     
     <form method="POST" action="/event/<%= isFavourite ? 'remove-favourite' : 'add-favourite' %>" class="mb-4">
       <input value="<%= eventID %>" name="eventID" type="hidden">
-      <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 transition duration-300">
+      <button type="submit" class="px-4 py-2 text-white transition duration-300 bg-blue-500 rounded-md hover:bg-blue-600">
         <%= isFavourite ? 'Remove from Favorites' : 'Add to Favorites' %>
       </button>
     </form>
     <hr class="mb-4">
 
-    <h3 class="text-lg font-semibold mb-2">Tickets details</h3>
+    <h3 class="mb-2 text-lg font-semibold">Tickets details</h3>
 
     <% if (tickets && tickets.length > 0) { %>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+      <div class="grid grid-cols-1 gap-4 md:grid-cols-2">
         <% tickets.forEach(ticket => { %>
-          <div class="border border-gray-200 rounded-md p-4">
-            <h4 class="text-lg font-semibold mb-2"><%= ticket.type %></h4>
+          <div class="p-4 border border-gray-200 rounded-md">
+            <h4 class="mb-2 text-lg font-semibold"><%= ticket.type %></h4>
             <ul>
               <li>Price: <%= ticket.price %>$</li>
               <li>Current quantity: <%= ticket.current_quantity %></li>
@@ -48,8 +49,14 @@
     <% } %>
     
     <div class="flex justify-center mt-8">
-      <a href="/tickets?eventid=<%= eventid %>" class="bg-blue-500 text-white px-6 py-3 rounded-full hover:bg-blue-600 transition duration-300">
+      <a href="/tickets?eventid=<%= eventid %>" class="px-6 py-3 text-white transition duration-300 bg-blue-500 rounded-full hover:bg-blue-600">
         Buy Tickets
+      </a>
+    </div>
+
+    <div class="flex justify-center mt-8">
+      <a href="/notifications?eventid=<%= eventid %>" class="px-6 py-3 text-white transition duration-300 bg-blue-500 rounded-full hover:bg-blue-600">
+        Notify
       </a>
     </div>
 
