--- a/src/views/header.ejs
+++ b/src/views/header.ejs
@@ -1,5 +1,5 @@
 
-<header class="bg-gray-800 text-white py-4 px-8 flex justify-between items-center">
+<header class="flex items-center justify-between px-8 py-4 text-white bg-gray-800">
     <div>
         <h1 class="text-2xl font-bold">TickETCD</h1>
         <h2 class="text-sm">Consistency in Every Ticket</h2>
@@ -22,3 +22,4 @@
         </div>
     <% } %>
 </header>
+
